--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
                 <li><a href="javascript:" class="menuAbout">About Clinigen<i class="fas fa-angle-down"></i></a>
                </li>
                 <li><a href="javascript:" class="menuGlobaOffice">Global offices<i class="fas fa-angle-down"></i></a></li>
-                <li><a href="javascript:" class="menuAbout">Careers<i class="fas fa-angle-down"></i></a></li>
-                <li><a href="javascript:" class="menuAbout">Investors<i class="fas fa-angle-down"></i></a></li>
-                <li><a href="javascript:" class="menuAbout">Sustainability<i class="fas fa-angle-down"></i></a></li>
-                <li><a href="javascript:" class="menuAbout">Newsroom<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuCareers">Careers<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuInvestors">Investors<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuSustain">Sustainability<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuNewsroom">Newsroom<i class="fas fa-angle-down"></i></a></li>
               </ul>
             </nav>
           </div>
@@ -81,7 +81,146 @@
                   <li><a href="http://">United States</a></li>
                  </ul>
                </div>
-               <!------------------------------------------------------>
+                <!-------------------------- SOUS MENU CAREERS ---------------------------->
+              <div class="menuCache_careers">
+                <ul>
+                  <li><a href="http://">Careers overview</a></li>
+                  <li><a href="http://">Apply Online</a></li>
+                  <li><a href="http://">Frequently Asked Questions</a></li>
+                  <li><a href="http://">Private Notice - Applicants</a></li>
+                 </ul>
+               </div>
+                <!-------------------------- SOUS MENU INVESTORS ---------------------------->
+              <div class="menuCache_investors">
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">At a Glance</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Financial Highlights</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Investment Case</a></li>
+                    <li class="secondLi"><a href="">Business Model</a></li>
+                    <li class="secondLi"><a href="">Our Track Record</a></li>
+                    <li class="secondLi"><a href="">Our Divisions</a></li>
+                    <li class="secondLi"><a href="">Strategy</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Share Tools</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Results, Reports and Presentations</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Quantum Archive</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Financial Calendar</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Press Releases</a></li>
+                    <li class="secondLi"><a href="">Press Releases</a></li>
+                    <li class="secondLi"><a href="">Regulatory News</a></li>
+                    <li class="secondLi"><a href="">Email Alerts</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Shareholder Services</a></li>
+                    <li class="secondLi"><a href="">AGM</a></li>
+                    <li class="secondLi"><a href="">Registar Services</a></li>
+                    <li class="secondLi"><a href="">Major Shareholders</a></li>
+                    <li class="secondLi"><a href="">Advisor Contacts</a></li>
+                    <li class="secondLi"><a href="">Analyst Coverage</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Corporate Governance</a></li>
+                    <li class="secondLi"><a href="">Corporate Governance Statement</a></li>
+                    <li class="secondLi"><a href="">Board of Directors</a></li>
+                    <li class="secondLi"><a href="">Tax Strategy</a></li>
+                    <li class="secondLi"><a href="">AIM Rules 26</a></li>
+                  </ul>
+                </div>
+                <div class="menuInvestor_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Investor Contacts</a></li>
+                  </ul>
+                </div>
+               </div>
+                     <!-------------------------- SOUS MENU SUSTAINABILITY ---------------------------->
+              <div class="menuCache_sustain">
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Overview</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Our Sustainibility Framework</a></li>
+                    <li class="secondLi"><a href="">Environmental Impact</a></li>
+                    <li class="secondLi"><a href="">Responsible Business</a></li>
+                    <li class="secondLi"><a href="">Our People</a></li>
+                    <li class="secondLi"><a href="">Products & Services</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Sustainable Governance</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Our Stakeholders</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">UN Sustainable Development Goals</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Materiality Assesment</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Our Sustainability Journey</a></li>
+                  </ul>
+                </div>
+                <div class="menuSustain_Card">
+                  <ul>
+                    <li class="mainLi"><a href="">Reports, Policies and Data</a></li>
+                    
+                  </ul>
+                </div>
+               </div>
+                <!-------------------------- SOUS MENU NEWSROOM ---------------------------->
+                <div class="menuCache_newsroom">
+                  <ul>
+                    <li><a href="http://">Video Library</a></li>
+                    <li><a href="http://">Press Releases</a></li>
+                    <li><a href="http://">Stay in Touch</a></li>
+                   </ul>
+                </div>
+                 <!------------------------------------------------------>
         </div>
      
         <div id="header_bot">
