--- a/public/index.html
+++ b/public/index.html
@@ -233,12 +233,13 @@
             <nav>
               <ul>
                 <li><a href="http://index.html">Mission</a></li>
-                <li><a href="http://index.html">How we can help<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuHowCanWeHelp">How we can help<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="http://index.html">Product & Services<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="http://index.html">Insights</a></li>
               </ul>
             </nav>
           </div>
+         
           <div class="header_bot_menuleft">
             <div id="header_bot_findAMedicine">
               <span>Find a medicine<i class="fas fa-angle-down"></i></span>
@@ -251,6 +252,15 @@
             <span class="separateur"></span><input type="button" value="" id="header_bot_search" />
           </div>
         </div>
+      </div>
+      <!-------------------------- SOUS MENU HOW WE CAN HELP ---------------------------->
+      <div class="menuCache_howCanWeHelp">
+        <ul>
+          <li><a href="http://">Pharmaceutical & Biotech Companies</a></li>
+          <li><a href="http://">Healthcare Professionals</a></li>
+          <li><a href="http://">Patient Groups</a></li>
+          <li><a href="http://">Patients</a></li>
+         </ul>
       </div>
     </header>
 
@@ -516,6 +526,7 @@
       </div>
     </main>
     <footer>
+<!-------------------------- FOOTER ---------------------------->
       <div class="footer">
         <div class="footerContaint">
           <div class="footerContaint_Card">
@@ -578,13 +589,13 @@
     </footer>
     <script src="src/js/index.js"></script>
     <script src="src/js/header.js"></script>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+<!-- Initialize Firebase 
+<script src="/__/firebase/init.js"></script>-->
   </body>
 </html>
