index finish and good polices

--- a/public/index.html
+++ b/public/index.html
@@ -272,18 +272,18 @@
           <div id="header_bot_menuMiddle">
             <nav>
               <ul>
-                <li><a href="http://index.html">Mission</a></li>
+                <li><a href="javascript:">Mission</a></li>
                 <li>
                   <a href="javascript:" class="menuHowCanWeHelp"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="http://index.html"
+                  <a href="javascript:" class="menuProductsServices"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
-                <li><a href="http://index.html">Insights</a></li>
+                <li><a href="javascript:">Insights</a></li>
               </ul>
             </nav>
           </div>
@@ -314,20 +314,48 @@
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
       <div class="menuCache_ProductsServices">
         <div class="menuCache_ProductsServices_L">
-          <ul>
-            <li><a href="http://">Products</a></li>
-            <li><a href="http://">Partnering</a></li>
-            <li><a href="http://">Divestment</a></li>
-            <li><a href="http://">Unlicensed Markets</a></li>
-            <li><a href="http://">Our Products</a></li>
-            <li><a href="http://">Services</a></li>
-            <li><a href="http://">Managed Access Programs</a></li>
-            <li><a href="http://">Clinical Supplies Management</a></li>
-            <li><a href="http://">Real World Data</a></li>
-            <li><a href="http://">Medical Science Liaison (MSLs)</a></li>
-          </ul>
+          <div class="menuCache_ProductsServices_Card">
+            <ul>
+              <li class="mainLi"><a href="http://">Products</a></li>
+              <li class="secondLi"><a href="http://">Partnering</a></li>
+              <li class="secondLi"><a href="http://">Divestment</a></li>
+              <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
+              <li class="secondLi"><a href="http://">Our Products</a></li>
+            </ul>
+          </div>
+          <div class="menuCache_ProductsServices_Card">
+            <ul>
+              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="secondLi">
+                <a href="http://">Managed Access Programs</a>
+              </li>
+              <li class="secondLi">
+                <a href="http://">Clinical Supplies Management</a>
+              </li>
+              <li class="secondLi"><a href="http://">Real World Data</a></li>
+              <li class="secondLi">
+                <a href="http://">Medical Science Liaison (MSLs)</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="menuCache_ProductsServices_R">R</div>
+        <span class="separatorMenuProduct"></span>
+        <div class="menuCache_ProductsServices_R">
+          <div class="menuCache_ProductsServices_Card_Medicine">
+            <img src="/public/images/findBlanc.JPG" alt="" />
+            <div class="menuCache_ProductsServices_Card_Title">
+              <span> FIND A MEDICINE</span>
+            </div>
+            <p>Online services for healthcare professionals</p>
+            <ul>
+              <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li><a href="">Clinigen Products</a></li>
+              <li><a href="">Special Obtains</a></li>
+              <li><a href="">Aseptics UK</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-------------------------- SLIDER ---------------------------->
