--- a/public/index.html
+++ b/public/index.html
@@ -552,9 +552,7 @@
           <div class="containt_investor_card">
             <span class="investor_card_titre">SHARE PRICE</span>
             <div class="investor_card_containt_SharePrice">
-              <p style="font-size: 50px">
-                861.50 <span style="font-size: 30px">GBp</span>
-              </p>
+              <p>861.50 <span>GBp</span></p>
             </div>
             <div class="investor_card_containt">
               <p>Change 14.50p 1.73%</p>
