fini page mission
+ réorga des fichiers css et dossier

--- a/public/index.html
+++ b/public/index.html
@@ -638,7 +638,7 @@
           <p>employees across five continents in 14 countries</p>
         </div>
         <div class="numberBot_Card">
-          <span class="target">6.4m</span>
+          <span class="target" style="margin-bottom: 20px">6.4m</span>
           <p>units shipped in the last year</p>
         </div>
         <div class="numberBot_Card">
