--- a/public/mission.html
+++ b/public/mission.html
@@ -374,15 +374,15 @@
           </p>
           <input type="button" value="Our mission in 120 seconds" />
         </div>
-      </div>
-      <!----------------------------------------------- MENU FIXED ----------------------------------->
-      <div class="menuFixed">
-        <ul>
-          <li><a href="http://">The Challenge</a></li>
-          <li><a href="http://">Right Medicine</a></li>
-          <li><a href="http://">Right Patient</a></li>
-          <li><a href="http://">Right Time</a></li>
-        </ul>
+        <!----------------------------------------------- MENU FIXED ----------------------------------->
+        <div class="menuFixed">
+          <ul>
+            <li><a href="http://">The Challenge</a></li>
+            <li><a href="http://">Right Medicine</a></li>
+            <li><a href="http://">Right Patient</a></li>
+            <li><a href="http://">Right Time</a></li>
+          </ul>
+        </div>
       </div>
       <!----------------------------------------------- TEXT 1 ----------------------------------->
       <div class="mainText1">
@@ -409,15 +409,16 @@
             <div class="european"></div>
           </div>
           <div class="rightMedicine_R">
-            <span>RIGHT MEDICINE</span>
+            <h3>RIGHT MEDICINE</h3>
             <p>
               We provide access to our own and other pharmaceutical companies'
               products, whether to meet unmet medical needs or for use in
               clinical trials. This includes providing access to medicines that
               have received regulatory approval, but may not be available in a
-              specific patient’s own country (‘unlicensed’ medicines). Ethical
-              unlicensed access helps protect patients from the growing threat
-              of counterfeit medicines distributed online.
+              specific patient’s own country (‘unlicensed’ medicines). <br />
+              <br />
+              Ethical unlicensed access helps protect patients from the growing
+              threat of counterfeit medicines distributed online.
             </p>
             <a href="http://"
               >How we can help pharmaceutical and biotech companies</a
@@ -430,41 +431,47 @@
       <div class="rightPatient">
         <div class="rightPatient_container">
           <div class="rightPatient_L">
-            <span>RIGHT PATIENT</span>
+            <h3>RIGHT PATIENT</h3>
             <p>
               Clinigen is dedicated to providing an ethical, compliant route for
-              healthcare professionals to source medicines. Whether a medicine
-              is unlicensed in a given country, not yet commercially available,
-              is experiencing a supply disruption, or is discontinued, we can
-              help. Our expertise in this area extends not just across the
-              entire commercial lifecycle of a product, but to pre- and
-              post-commercial stages too.
+              healthcare professionals to source medicines. <br /><br />
+              Whether a medicine is unlicensed in a given country, not yet
+              commercially available, is experiencing a supply disruption, or is
+              discontinued, we can help. Our expertise in this area extends not
+              just across the entire commercial lifecycle of a product, but to
+              pre- and post-commercial stages too.
             </p>
             <a href="http://">How we can help healthcare professionals</a>
             <a href="http://">How we can help patients</a>
           </div>
           <div class="rightPatient_R">
-            <div class="keyFacts_Card">
-              <span>IMG</span><span>6000</span>
-              <p>over 6,000 HCPs use Clinigen to access unlicensed medicines</p>
-            </div>
-            <div class="keyFacts_Card">
-              <span>IMG</span><span>30+</span>
-              <p>
-                years' experience as the global leader in providing access to
-                medicines
-              </p>
-            </div>
-            <div class="keyFacts_Card">
-              <span>IMG</span><span>1,700</span>
-              <p>
-                provided access to 1,700 different unlicensed medicines across
-                111 countries in 2017
-              </p>
-            </div>
-            <div class="keyFacts_Card">
-              <span>IMG</span><span>3.5m+</span>
-              <p>3.5m+ units shipped for patient treatment per year</p>
+            <img src="./images/keyfact.JPG" alt="" />
+            <h4>KEY FACTS</h4>
+            <div class="listCards">
+              <div class="keyFacts_Card">
+                <span class="cible"> 6000</span>
+                <p>
+                  over 6,000 HCPs use Clinigen to access unlicensed medicines
+                </p>
+              </div>
+              <div class="keyFacts_Card">
+                <span class="moitie"> 30+</span>
+                <p>
+                  years' experience as the global leader in providing access to
+                  medicines
+                </p>
+              </div>
+              <div class="keyFacts_Card">
+                <span class="pizza"> 1,700</span>
+                <p>
+                  provided access to 1,700 different unlicensed medicines across
+                  111 countries in 2017
+                </p>
+              </div>
+              <div class="keyFacts_Card">
+                <span class="ppl"> 3.5m+</span>
+                <p>3.5m+ units shipped for patient treatment per year</p>
+              </div>
             </div>
           </div>
         </div>
@@ -473,32 +480,39 @@
       <div class="rightTime">
         <div class="rightTime_container">
           <div class="rightTime_L">
-            <div class="keyFact_Card">
-              <span>IMG</span><span>9.5m</span>
-              <p>units shipped in the last 3 years</p>
-            </div>
-            <div class="keyFact_Card">
-              <span>IMG</span><span>13</span>
-              <p>ocations around the globe</p>
-            </div>
-            <div class="keyFact_Card">
-              <span>IMG</span><span>130</span>
-              <p>shipped to 130 countries in the last 3 years</p>
+            <img src="./images/keyfact.JPG" alt="" />
+            <h4>KEY FACTS</h4>
+            <div class="listCards">
+              <div class="keyFacts_Card">
+                <span class="cible"> 9.5m</span>
+                <p>units shipped in the last 3 years</p>
+              </div>
+              <div class="keyFacts_Card">
+                <span class="earth"> 13</span>
+                <p>ocations around the globe</p>
+              </div>
+              <div class="keyFacts_Card">
+                <span class="moitie"> 130</span>
+                <p>shipped to 130 countries in the last 3 years</p>
+              </div>
             </div>
           </div>
           <div class="rightTime_R">
-            <span>RIGHT TIME</span>
+            <h3>RIGHT TIME</h3>
             <p>
               The patient is central to everything we do day-to-day. Often if
               they are using one of our niche or unlicensed medicines it is
               because they have failed to respond to front line therapies or
               have a rare or difficult to treat condition. Shortages and delays
-              can be life-threatening. In a similar way, if a comparator
-              medicine is unavailable for a clinical trial, progress in
-              developing new treatments can be significantly delayed. We don’t
-              just help make medicines available, we get them to the people who
-              need them. All over the world and however challenging the
-              circumstances.
+              can be life-threatening. <br />
+              <br />
+              In a similar way, if a comparator medicine is unavailable for a
+              clinical trial, progress in developing new treatments can be
+              significantly delayed. <br />
+              <br />
+              We don’t just help make medicines available, we get them to the
+              people who need them. All over the world and however challenging
+              the circumstances.
             </p>
             <a href="http://">Read more about our operational expertise</a>
           </div>
@@ -507,11 +521,15 @@
       <!----------------------------------------------- RELATED LINKS ----------------------------------->
       <div class="relatedLinks">
         <div class="relatedLinks_container">
-          <span>RELATED LINKS</span
-          ><a href="http://">Pharmaceuticals & Biotech companies</a
-          ><a href="http://">Healthcare Professionals</a
-          ><a href="http://">Patient Groups</a>
-          <a href="http://">Patients</a>
+          <h3>RELATED LINKS</h3>
+          <div>
+            <ul>
+              <li><a href="http://">Pharmaceuticals & Biotech companies</a></li>
+              <li><a href="http://">Healthcare Professionals</a></li>
+              <li><a href="http://">Patient Groups</a></li>
+              <li><a href="http://">Patients</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
@@ -591,8 +609,8 @@
         </div>
       </div>
     </footer>
-    <script src="src/js/index.js"></script>
     <script src="src/js/header.js"></script>
+    <script src="src/js/mission.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
