page mission finish
+ max width pour le responsive

--- a/public/index.html
+++ b/public/index.html
@@ -592,16 +592,18 @@
       <!-------------------------- VIDEO ---------------------------->
       <div class="video">
         <div class="containerVideo">
-          <div class="containerVideo_UpTitre">
-            <span>Video:</span> Clinigen group
-          </div>
-          <h2>THE CLINIGEN SOLUTION TO CLINICAL TRIAL CLOSURE</h2>
-          <div class="containerVideo_Text">
-            <p>
-              This is what a Managed Access Program looks like with Clinigen -
-              ethical, compliant and patient focused.
-            </p>
-            <input type="button" value="Play video" />
+          <div class="videoCard">
+            <div class="containerVideo_UpTitre">
+              <span>Video:</span> Clinigen group
+            </div>
+            <h2>THE CLINIGEN SOLUTION TO CLINICAL TRIAL CLOSURE</h2>
+            <div class="containerVideo_Text">
+              <p>
+                This is what a Managed Access Program looks like with Clinigen -
+                ethical, compliant and patient focused.
+              </p>
+              <input type="button" value="Play video" />
+            </div>
           </div>
         </div>
       </div>
