--- a/public/mission.html
+++ b/public/mission.html
@@ -377,10 +377,10 @@
         <!----------------------------------------------- MENU FIXED ----------------------------------->
         <div class="menuFixed">
           <ul>
-            <li><a href="http://">The Challenge</a></li>
-            <li><a href="http://">Right Medicine</a></li>
-            <li><a href="http://">Right Patient</a></li>
-            <li><a href="http://">Right Time</a></li>
+            <li><a href="javascript:">The Challenge</a></li>
+            <li><a href="javascript:">Right Medicine</a></li>
+            <li><a href="javascript:">Right Patient</a></li>
+            <li><a href="javascript:">Right Time</a></li>
           </ul>
         </div>
       </div>
@@ -611,6 +611,7 @@
     </footer>
     <script src="src/js/header.js"></script>
     <script src="src/js/mission.js"></script>
+    <script src="src/js/missionClick.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
