fix responsive index

--- a/public/index.html
+++ b/public/index.html
@@ -470,42 +470,50 @@
         <div class="lastNews_Titre"><h3>LATEST FROM CLINIGEN</h3></div>
         <div class="bgGris_listCards">
           <div class="card">
-            <span class="titre">INSIGHT</span>
-            <img src="images/Insight.png" alt="" />
-            <div class="card_content">
-              <a href="http://index.html"
-                >FLEXIBLE PACKAGING & LABELLING SOLUTIONS AT SCALE</a
-              >
+            <div class="imgAndText">
+              <span class="titre">INSIGHT</span>
+              <img src="images/Insight.png" alt="" />
+              <div class="card_content">
+                <a href="http://index.html"
+                  >FLEXIBLE PACKAGING & LABELLING SOLUTIONS AT SCALE</a
+                >
+              </div>
             </div>
             <div class="card_bot">
               <a href="http://index.html">View all insights</a>
             </div>
           </div>
           <div class="card">
-            <span class="titre">CAREERS / VACANCIES</span>
-            <img src="images/careers.jpg" alt="" />
-            <div class="card_content">
-              We’re looking for people who want to make a difference
+            <div class="imgAndText">
+              <span class="titre">CAREERS / VACANCIES</span>
+              <img src="images/careers.jpg" alt="" />
+              <div class="card_content">
+                We’re looking for people who want to make a difference
+              </div>
             </div>
             <div class="card_bot">
               <a href="http://index.html">Join our team</a>
             </div>
           </div>
           <div class="card">
-            <span class="titre">RESULTS</span>
-            <img src="images/card3.png" alt="" />
-            <div class="card_content">
-              Half Year Results for the Six Months Ended 31 December 2020
+            <div class="imgAndText">
+              <span class="titre">RESULTS</span>
+              <img src="images/card3.png" alt="" />
+              <div class="card_content">
+                Half Year Results for the Six Months Ended 31 December 2020
+              </div>
             </div>
             <div class="card_bot">
               <a href="http://index.html">Results, Reports and Presentations</a>
             </div>
           </div>
           <div class="card">
-            <span class="titre">CLINIGEN DIRECT</span>
-            <img src="images/card4.jpg" alt="" />
-            <div class="card_content">
-              The personal assistant every pharmacist wishes they had.
+            <div class="imgAndText">
+              <span class="titre">CLINIGEN DIRECT</span>
+              <img src="images/card4.jpg" alt="" />
+              <div class="card_content">
+                The personal assistant every pharmacist wishes they had.
+              </div>
             </div>
             <div class="card_bot">
               <a href="http://index.html">Watch video</a>
